兼容jdk8语法适配